# rust-masterclass

./: .gitignore  .gitmodules  README.md
examples/part1/: Makefile  README.md  clear_error.rs  compile_time_error.rs  cryptic_template_error.cpp  potential_data_race.cpp  shared_access.rs
examples/part2/: Cargo.toml  README.md  borrowing.rs  dangerous_aliasing.cpp  derive_builtin.rs  derive_serde.rs  exceptions.cpp  explicit_copy.rs  move_semantics.cpp  move_semantics.rs  option_type.rs  optional.cpp  pattern_matching.rs  result_type.rs  simple_type_parameters.cpp  simple_type_parameters.rs  traits.rs  use_after_move.cpp  use_after_move.rs  vec_macro.rs
